po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 09:12+0000\n"
+"PO-Revision-Date: 2016-10-16 17:41+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3826,7 +3826,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Namnskyltar - utskrift"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
