--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 11:15+0000\n"
+"PO-Revision-Date: 2016-10-16 18:44+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -25753,11 +25753,11 @@ msgstr "Du har inte access till denna sida"
 
 #: CRM/Price/Form/Option.php
 msgid "Pre Option Help"
-msgstr ""
+msgstr "Text före alternativet"
 
 #: CRM/Price/Form/Option.php
 msgid "Post Option Help"
-msgstr ""
+msgstr "Text efter alternativet"
 
 #: CRM/Profile/Form/Edit.php
 msgid ""
