po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 09:25+0000\n"
+"PO-Revision-Date: 2016-10-16 17:41+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -172,7 +172,7 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
-msgstr "Är detta arrangemangsnamnskyltsformat det förvalda?"
+msgstr "Är detta etikettformatet det förvalda?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
