--- a/po/ca_ES/pledge.po
+++ b/po/ca_ES/pledge.po
@@ -4,14 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014-2015
+# francescbassas <francesc@babu.cat>, 2014-2016
 # francescbassas <francesc@babu.cat>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 16:28+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -496,7 +496,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Pledge Amounts"
-msgstr "Quantitats compromeses  "
+msgstr "Imports compromesos  "
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Payments Start Date"
