--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 16:09+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-17 16:50+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1020,11 +1020,11 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr ""
+msgstr "La vostra organització pot utilitzar campanyes per fer un seguiment de totes les interaccions amb els constituents relacionades amb un compromís o recaptació de fons particular. Podeu enllaçar activitats, contribucions, participacions a esdeveniments, mailings, altes a pertinences i compromisos a una campanya particular."
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
-msgstr "Mostrar campanya(s) anteriors en aquesta llista. "
+msgstr "Mostra campanyes anteriors en aquesta llista de selecció. "
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "There are currently no active Campaigns."
