po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-16 22:07+0000\n"
+"PO-Revision-Date: 2016-10-17 22:05+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -4028,7 +4028,7 @@ msgstr "Data d'afegit"
 #: CRM/Contact/Form/Search/Custom/Group.php
 #: CRM/Contact/Form/Search/Custom/RandomSegment.php CRM/SMS/Form/Group.php
 msgid "Include Group(s)"
-msgstr "Inclou els grups"
+msgstr "Grups inclosos"
 
 #: CRM/Contact/Form/Search/Custom/DateAdded.php
 #: CRM/Contact/Form/Search/Custom/Group.php
@@ -9378,19 +9378,19 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Automatic"
-msgstr ""
+msgstr "Per defecte"
 
 #: CRM/Core/SelectValues.php
 msgid "Only send to email addresses assigned to the specified location"
-msgstr ""
+msgstr "Enviar només a les adreces de correu electrònic assignades al tipus d'ubicació"
 
 #: CRM/Core/SelectValues.php
 msgid "Prefer email addresses assigned to the specified location"
-msgstr ""
+msgstr "Preferència per les adreces de correu electrònic assignades al tipus d'ubicació"
 
 #: CRM/Core/SelectValues.php
 msgid "Exclude email addresses assigned to the specified location"
-msgstr ""
+msgstr "Excloure les adreces de correu electrònic assignades al tipus d'ubicació"
 
 #: CRM/Core/SelectValues.php templates/CRM/Price/Page/table.tpl
 msgid "Public"
@@ -13093,11 +13093,11 @@ msgstr ""
 
 #: ang/crmAttachment/attachments.html
 msgid "Add file:"
-msgstr ""
+msgstr "Adjunta un arxiu:"
 
 #: ang/crmAttachment/attachments.html
 msgid "Alternatively, you may add new files using drag/drop."
-msgstr ""
+msgstr "Alternativament, és possible adjuntar nous arxius arrossegant-los."
 
 #: ang/crmAttachment.js
 msgid "Attachment failed"
@@ -17265,7 +17265,7 @@ msgstr "Grups regulars "
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "%1 has joined or been added to these group(s)."
-msgstr "%1 s'ha unit o ha estat afegit a aquests grup(s)."
+msgstr "%1 s'ha unit o ha estat afegit a aquests grups."
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
@@ -17275,7 +17275,7 @@ msgstr "Afegit (per %1)"
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid ""
 "Remove %1 from %2? (status in this group will be changed to 'Removed')."
-msgstr ""
+msgstr "Elimina %1 de %2? (l'estat d'aquest grup canviarà a \"Eliminat\"):"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/UF/Page/ProfileTemplates.tpl
@@ -17310,7 +17310,7 @@ msgstr "Pendent (per %1)"
 msgid ""
 "Delete %1 from %2? (this group will no longer be listed under Pending "
 "Groups)"
-msgstr ""
+msgstr "Elimina %1 de %2? (aquest grup no es llistarà més sota els grups pendents)"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "Past Groups"
@@ -17332,7 +17332,7 @@ msgstr "Eliminar (per %1)"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "Add %1 back into %2?"
-msgstr ""
+msgstr "Afegeix de nou a %1 a %2?"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
@@ -17342,7 +17342,7 @@ msgstr "Torna a unir-lo al grup"
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid ""
 "Delete %1 from %2? (this group will no longer be listed under Past Groups)."
-msgstr ""
+msgstr "Elimina %1 de %2? (aquest grup no es llistarà més sota els grups antics)"
 
 #: templates/CRM/Contact/Page/View/Log.tpl
 msgid "Change Log:"
@@ -18887,7 +18887,7 @@ msgstr "Camps per aquest grup."
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid "Negative Amounts"
-msgstr "quantitats negatives"
+msgstr "Imports negatius"
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid ""
@@ -20107,7 +20107,7 @@ msgstr "També podeu compartir l'enllaç inferior per correu electrònic o a la 
 
 #: templates/CRM/common/TabHeader.js
 msgid "Your changes in the <em>%1</em> tab have not been saved."
-msgstr ""
+msgstr "No s'han pogut desar els vostres canvis en la pestanya <em>%1</em>."
 
 #: templates/CRM/common/TabHeader.tpl
 msgid "disabled"
@@ -21877,7 +21877,7 @@ msgstr "Report de la pàgina de campanya personal."
 msgid ""
 "Summarizes amount raised and number of contributors for each Personal "
 "Campaign Page."
-msgstr "Resumeix l'import obtingut i el número de contribuïdors per a cada pàgina de campanya personal."
+msgstr "Resumeix l'import assolit i el número de contribuïdors per a cada pàgina de campanya personal."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Summary Report"
