--- a/po/ca_ES/batch.po
+++ b/po/ca_ES/batch.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 16:29+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -154,7 +154,7 @@ msgstr ""
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Total for amounts entered below does not match the expected batch total."
-msgstr "El total de les quantitats introduïdes de sota coincideix amb el total del lot esperat. "
+msgstr "El total dels imports introduïts a sota no coincideix amb el total de l'import del lot. "
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Processed."
