--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-11 07:55+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-17 17:22+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1182,7 +1182,7 @@ msgstr "Previsualitza com a HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Previsualitza com a text pla"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
@@ -1235,7 +1235,7 @@ msgstr ""
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Seguiment de respostes"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
@@ -1420,11 +1420,11 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr ""
+msgstr "Elimina correus duplicats"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Mètode de selecció"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
@@ -1508,11 +1508,11 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
-msgstr ""
+msgstr "Incloure destinataris anteriors"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Past Recipients From"
-msgstr ""
+msgstr "Excloure destinataris anteriors"
 
 #: ang/crmMailing/Recipients.js
 msgid ""
