--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 17:09+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-17 21:48+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -258,7 +258,7 @@ msgstr "Configura"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "Quant a"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
@@ -493,11 +493,11 @@ msgstr ""
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
 msgid "Save and Done"
-msgstr "Desa i fet"
+msgstr "Desa i acaba"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 msgid "Save and Next"
-msgstr "Desar i següent"
+msgstr "Desa i continua"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Order by Column"
@@ -671,7 +671,7 @@ msgstr "Import màxim"
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 #: CRM/PCP/DAO/PCP.php CRM/Report/Form/Contribute/PCP.php
 msgid "Goal Amount"
-msgstr "Quantitat de l'objectiu"
+msgstr "Quantitat objectiu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/AdditionalPayment.php
