--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-11 07:59+0000\n"
+"PO-Revision-Date: 2016-10-17 16:02+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -704,7 +704,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Total Donors"
-msgstr ""
+msgstr "Total de donants"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last name, First name"
