--- a/po/ca_ES/pcp.po
+++ b/po/ca_ES/pcp.po
@@ -3,16 +3,16 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# francescbassas <francesc@babu.cat>, 2014-2015
+# francescbassas <francesc@babu.cat>, 2014-2016
 # francescbassas <francesc@babu.cat>, 2013
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 16:20+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-17 16:36+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -227,7 +227,7 @@ msgstr "El vostre objectiu"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value"
-msgstr "L'objectiu total ha de ser un valor numèric"
+msgstr "La quantitat objectiu ha de ser un valor numèric"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Join Us"
@@ -695,7 +695,7 @@ msgstr "Objectiu"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "raised"
-msgstr ""
+msgstr "assolit"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "HONOR ROLL"
