po: update po/ca_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:48+0000\n"
+"PO-Revision-Date: 2016-10-17 22:02+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -532,7 +532,7 @@ msgstr "El rebut i confirmació de la pertinença han estat enviats a %1."
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Membership Section Enabled?"
-msgstr "Habilitar la secció de pertinença?"
+msgstr "Habilita la secció de pertinença?"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Title - New Membership"
@@ -1376,7 +1376,7 @@ msgid ""
 "Use this form to enable and configure a Membership Signup and Renewal "
 "section for this Online Contribution Page. If you're not using this page for"
 " membership signup, leave the <strong>Enabled</strong> box un-checked.."
-msgstr ""
+msgstr "Utilitzeu aquest formulari per habilitar i configurar una secció de registre i renovació de pertinences per aquesta pàgina de contribucions en línia. Si no esteu utilitzant aquesta pàgina pels registres de pertinences en línia, deixeu la casella <strong>Habilita</strong> deseleccionada."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Include a Membership Signup section in this Online Contribution page?"
