po: update po/ca_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-13 11:02+0000\n"
+"PO-Revision-Date: 2016-10-17 21:44+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -228,7 +228,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign starts on %1"
-msgstr ""
+msgstr "La campanya va començar el %1"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign ended on %1"
@@ -240,15 +240,15 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1 of %2"
-msgstr ""
+msgstr "%1 de %2 assolit"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1"
-msgstr ""
+msgstr "%1 assolit"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Donors"
-msgstr ""
+msgstr "Donants"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Learn more."
@@ -1172,15 +1172,15 @@ msgstr "Afegeix una recompensa a la pàgina de contribució"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow other amounts"
-msgstr "Permetre altres quantitats "
+msgstr "Permetre altres imports "
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Contribution Amounts Label"
-msgstr ""
+msgstr "Etiqueta d'imports de contribució"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Contribution Amounts section enabled"
-msgstr "Secció de quantitats de contribucions habilitat "
+msgstr "Secció d'imports de contribucions habilitat"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Execute real-time monetary transactions"
@@ -1237,7 +1237,7 @@ msgstr ""
 msgid ""
 "To disable Contribution Amounts section you need to first disable Separate "
 "Membership Payment option from Membership Settings."
-msgstr "Per a desactivar la secció de quantitats de contribució, necessiteu primer desactivar desactivar l'opció de \"Pagament de membres separada\" des de \"Opcions de membres\"."
+msgstr "Per a deshabilitar la secció d'imports de contribució, necessiteu primer deshabilitar l'opció de \"Pagament de membres separada\" des de \"Opcions de membres\"."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
@@ -1317,7 +1317,7 @@ msgstr "civicrm_pàgina_de_contribució"
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Contribute/Form/ContributionPage/TabHeader.php
 msgid "Amounts"
-msgstr "Quantitats "
+msgstr "Imports "
 
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 #: CRM/Contribute/Page/ContributionPage.php
@@ -1391,7 +1391,7 @@ msgstr "Títol i configuració"
 msgid ""
 "Allow individuals to contribute and / or signup for membership on behalf of "
 "an organization?"
-msgstr "Permetre a les persones contribuir i / o registrar-se per ser membre en nom d'una organització?"
+msgstr "Permetre a les persones contribuir i / o registrar-se per ser membres en nom d'una organització?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Organization Profile"
@@ -1403,7 +1403,7 @@ msgstr "Etiqueta en nom de "
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Use a confirmation page?"
-msgstr ""
+msgstr "Utilitza una pàgina de confirmació?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Is this Online Contribution Page Active?"
@@ -1411,15 +1411,15 @@ msgstr "Està activa aquesta pàgina de contribucions en línia?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honoree Section Enabled"
-msgstr "Secció homenatjada habilitada"
+msgstr "Secció en honor a habilitada"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honoree Section Title"
-msgstr "Títol de la secció homenatjat "
+msgstr "Títol de la secció en honor a "
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honoree Introductory Message"
-msgstr "Missatge introductori del homenatjat "
+msgstr "Missatge introductori en honor a"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honor Types"
@@ -1427,7 +1427,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honoree Profile"
-msgstr ""
+msgstr "Perfil en honor a"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "At least one value must be selected if Honor Section is active"
@@ -1435,7 +1435,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Please select a profile used for honoree"
-msgstr ""
+msgstr "Seleccioneu un perfil utilitzat per en honor a"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Please do not use '/' in Title"
@@ -1502,7 +1502,7 @@ msgstr "Agraïments i rebut "
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "URL to Logo Image"
-msgstr "URL a la imatge del logotipo"
+msgstr "URL de la imatge del logo"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Contribute!"
@@ -1546,7 +1546,7 @@ msgstr "Color de l'enllaç a la pàgina d'inici"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Enable Widget?"
-msgstr "habilitar Widget?"
+msgstr "Habilita el giny?"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About is a required field."
@@ -3069,7 +3069,7 @@ msgid ""
 "If you have chosen to <strong>Allow Other Amounts</strong>, you can use the "
 "fields above to control minimum and/or maximum acceptable values (e.g. don't"
 " allow contribution amounts less than %1)."
-msgstr "Si heu escollit <strong>Permetre Altres quatitats</strong>, podeu utilitzar els camps de dalt per a controlar els valors mínim i /o màxim acceptables (p. ex. no permetre quantitats de contribucions menors a %1)."
+msgstr "Si heu escollit <strong>Permetre Altres quatitats</strong>, podeu utilitzar els camps de dalt per a controlar els valors mínim i /o màxim acceptables (p. ex. no permetre imports de contribucions menors a %1)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Fixed Contribution Options"
@@ -3080,7 +3080,7 @@ msgid ""
 "Use the table below to enter up to ten fixed contribution amounts. These "
 "will be presented as a list of radio button options. Both the label and "
 "dollar amount will be displayed."
-msgstr "Utilitzar la taula de sota per a introduir fins a deu quantitats de contribució. Aquest es presentaran com una llista d'opcions. Es mostraran l'etiqueta i el valor corresponent. "
+msgstr "Utilitzar la taula de sota per a introduir fins a deu imports de contribució. Aquest es presentaran com una llista d'opcions. Es mostraran l'etiqueta i el valor corresponent. "
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3279,7 +3279,7 @@ msgid ""
 "so it can helpful to set up specific types for accounting purposes. You can "
 "add or modify contribution available types from Administer &gt; "
 "CiviContribute &gt; Financial Types."
-msgstr ""
+msgstr "Selecciona el tipus financer corresponent per les contribucions fetes utilitzant aquesta pàgina (p. ex. donatius, capital de campanyes, etc.). Els tipus financers (i els codis comptables associats) són inclosos quan s'exporten les contribucions, per la qual cosa pot ser útil configurar tipus específics per propòsits comptables. Podeu afegir o modificar els tipus de contribucions disponibles des de Administra &gt; CiviCampaign &gt; Tipus financers."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3288,7 +3288,7 @@ msgid ""
 " be used when recording the membership payment. The financial type selected "
 "here will only be used if you are also collecting additional contributions "
 "(as configured on the Membership Settings page)."
-msgstr ""
+msgstr "Nota: Si esteu utilitzant aquesta pàgina de contribució pel registre i renovació de pertinences, el tipus financer configurat en la configuració del tipus de pertinença s'utilitzarà quan es registri el pagament de la pertinença. El tipus financer escollit aquí només s'utilitzarà si també esteu recollint contribucions addicionals (com s'haurà configurat a la pàgina de configuració de la pertinença)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Intro Content"
@@ -3309,7 +3309,7 @@ msgstr "Contingut del peu"
 msgid ""
 "If you want content displayed at the bottom of the contribution page, enter "
 "it here."
-msgstr "Si vol que el contingut es mostri en la part inferior de la pàgina de contribució, introduir-lo aquí. "
+msgstr "Si voleu que el contingut es mostri en la part inferior de la pàgina de contribució, introduïu-lo aquí. "
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3317,7 +3317,7 @@ msgid ""
 "'campaign'). If you enable a contribution widget for this page, the widget "
 "will track progress against this goal. Otherwise, the goal will display as "
 "'no limit'."
-msgstr ""
+msgstr "Introduïu un objectiu d'import opcional per aquesta pàgina de contribució (p. ex. per a aquesta campanya). Si habiliteu un giny de contribució per aquesta pàgina , el giny farà un seguiment del progrés en vers aquest objectiu. D'altra banda, l'objectiu es mostrarà sense límit."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Date Range"
@@ -3335,7 +3335,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Honoree"
-msgstr ""
+msgstr "En honor a"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3343,7 +3343,7 @@ msgid ""
 " with their gift, check this box. An optional Honoree section will be "
 "included in the form. Honoree information is automatically saved and linked "
 "with the contribution record."
-msgstr ""
+msgstr "Si voleu permetre als contribuents especificar una persona en honor a la qual fan el donatiu, marqueu aquesta casella. Una secció opcional en honor a serà inclosa en el formulari. La informació en honor a es desa automàticament i s'enllaça amb el registre de la contribució."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3371,13 +3371,13 @@ msgid ""
 "When enabled, links allowing people to share this online contribution page "
 "with their social network will be displayed (e.g. Facebook \"Like\", "
 "Google+, and Twitter)."
-msgstr ""
+msgstr "Quan està habilitat, es mostraran els enllaços que permeten compartir a la gent aquesta pàgina de contribució en línia amb les seves xarxes socials (p. ex. Facebook \"M'agrada\", Google+ i Twitter)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
 "Social media links will be included on the Contribution Thank-you page, "
 "Tell-a-Friend page (if enabled), and in contribution receipt emails."
-msgstr ""
+msgstr "Els enllaços socials de suports seran inclosos a la pàgina d'agraïment de la contribució, la pàgina d'explica-ho a un amic (si esà habilitada), i als rebuts per correu electrònic."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3401,7 +3401,7 @@ msgid ""
 "Use this form to edit the page title, financial type (e.g. donation, "
 "campaign contribution, etc.), goal amount, introduction, and status "
 "(active/inactive) for this online contribution page."
-msgstr ""
+msgstr "Utilitzeu aquest formulari per editar el títol de la pàgina, el tipus financer (p. ex. donatiu, contribució a una campanya, etc.), quantitat objectiu, introducció i estat (activa/inactiva) per aquestà pàgina de contribució en línia."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3413,7 +3413,7 @@ msgstr "Aquest títol es mostrarà en la part superior de la pàgina.<br /> Util
 msgid ""
 "Select the corresponding financial type for contributions made using this "
 "page."
-msgstr ""
+msgstr "Selecciona el tipus financer corresponent per les contribucions fetes utilitzant aquesta pàgina."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3458,7 +3458,7 @@ msgstr ""
 msgid ""
 "If you disable this contributions will be processed immediately after "
 "submitting the contribution form."
-msgstr ""
+msgstr "Si deshabiliteu això les contribucions es processaran immediatament després d'enviar el formulari de contribució."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3552,7 +3552,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "Contribution Links"
-msgstr ""
+msgstr "Enllaços de la contribució"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "New Contribution"
