--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -10,6 +10,7 @@
 #   <diego.viegas@dotproject.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
 # drero <dreroips@yahoo.com.br>, 2012
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Finks Costa <finkseletronica28@gmail.com>, 2015-2016
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:27+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6880,7 +6881,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
-msgstr ""
+msgstr "Plugins"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
