--- a/po/pt_BR/batch.po
+++ b/po/pt_BR/batch.po
@@ -5,13 +5,14 @@
 # Translators:
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # Guilherme Brein <guilherme@fisesp.org.br>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:29+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,11 +34,11 @@ msgstr "Ver/Adicionar Transacões para Lote"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
-msgstr "Re-Abrir Lote"
+msgstr "Reabrir Lote"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Apagar Lote"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -242,7 +243,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "A \"Transaction ID\" deve ser única no banco de dados"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
