po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-16 17:41+0000\n"
+"PO-Revision-Date: 2016-10-17 14:28+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3810,7 +3810,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Radera anmälan helt"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
@@ -3818,7 +3818,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Avbryt anmälan"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
