po: update po/pt_BR/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/countries.po
+++ b/po/pt_BR/countries.po
@@ -5,6 +5,7 @@
 # Translators:
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # Leonardo Moraes de Oliveira <leonardoleozinho576@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # ramalhotech <ramalho.tech@gmail.com>, 2013
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:31+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -356,7 +357,7 @@ msgstr "Polinésia Francesa"
 
 msgctxt "country"
 msgid "French Southern Territories"
-msgstr "Territorios Franceses do Sul"
+msgstr "Territórios Franceses do Sul"
 
 msgctxt "country"
 msgid "Gabon"
@@ -1052,20 +1053,20 @@ msgstr "São Martinho (Parte Francesa)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Ilhas Virgens, Inglaterra"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Costa do Marfim"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "República Islâmica do Irã"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "República da Macedônia"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Território Palestino"
