po: update po/pt_BR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/install.po
+++ b/po/pt_BR/install.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2014
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # Gabriel Silva <gabrielrmas@gmail.com>, 2016
 # Kennedy Rodrigues de souza <kennedywork202@gmail.com>, 2015
 # Renan Meira Ferreira <doidormf@gmail.com>, 2014
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:35+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +29,7 @@ msgstr "Ops! Por favor, corrija o seu local de instalação"
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Por favor descomprima (untar) sua cópia baixada do CiviCRM no diretório <stromg>%1</strong> abaixo do diretório raiz do Drupal."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
@@ -36,11 +37,11 @@ msgstr "Oops! CiviCRM já está instalado"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[diretório raiz do Drupal em uso]"
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "Guia de instalação"
 
 #: install/index.php
 msgid ""
@@ -67,11 +68,11 @@ msgstr "Oops! Versão incorreta do Drupal"
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "Esta versão do CiviCRM somente pode ser utulizada com o Drupla 6.x ou 7.x. Cerifique-se "
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "O instalador somente pode ser utilizado para a versão do WordPress do CiviCRM."
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -99,7 +100,7 @@ msgstr "Não foi possível achar o servidor a MySQL em '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
-msgstr "As credências de acesso estão corretas?"
+msgstr "As credenciais de acesso estão corretas?"
 
 #: install/index.php
 msgid "That username/password doesn't work"
@@ -111,7 +112,7 @@ msgstr "Versão miníma do MySQL %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "É necessária a versão do MySQL igual ou superior a versão %1, você está utilizando o MySQL versão %2."
 
 #: install/index.php
 msgid "MySQL %1"
@@ -129,39 +130,39 @@ msgstr ""
 
 #: install/index.php
 msgid "Is the provided database name valid?"
-msgstr ""
+msgstr "O nome fornecido do banco de dados é válido?"
 
 #: install/index.php
 msgid ""
 "The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
 " as characters in the name."
-msgstr ""
+msgstr "O nome fornecido para o banco de dados é inválido. Por favor utilize apenas os caracters: 0-9, a-z, A-Z e _ no nome."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
-msgstr ""
+msgstr "A variável de configuração do MySQL 'thread_stack' está acima do mínimo (%1k)?"
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr ""
+msgstr "Posso acessar ou criar o banco de dados?"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
-msgstr ""
+msgstr "Não foi possível criar novos banco de dados e o banco de dados '%1\" não existe."
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Posso criar ou acessar tabelas InnoDB no banco de dados?"
 
 #: install/index.php
 msgid ""
 "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM"
 " but is either not available or not enabled in this MySQL database server."
-msgstr ""
+msgstr "Não foi possível criar tabelas InnoDB. O suporte para InnoDB no MySAL é necessário para o CiviCRM mas não está disponível ou habilitado neste servidor MySQL."
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
-msgstr ""
+msgstr "Posso criar tabelas temporárias no banco de dados?"
 
 #: install/index.php
 msgid ""
@@ -171,22 +172,22 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr ""
+msgstr "Posso criar tabelas de travamento no banco de dados?"
 
 #: install/index.php
 msgid ""
 "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
-msgstr ""
+msgstr "Não foi possível criar tabelas de travamento. O usuário MySQL corrente não possui o privilégio LOCK TABLES."
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Posso criar gatilhos (triggers) no banco de dados?"
 
 #: install/index.php
 msgid ""
 "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  "
 "privilege."
-msgstr ""
+msgstr "Não foi possível criar gatilhos (triggers). Este usuário MySQL não possui o privilégio CREATE TRIGGERS."
 
 #: install/index.php
 msgid "PHP5 installed"
@@ -198,7 +199,7 @@ msgstr "Versão do PHP %1"
 
 #: install/index.php
 msgid "File permissions"
-msgstr "Permissões aos arquivos"
+msgstr "Permissões dos arquivos"
 
 #: install/index.php
 msgid "Does the webserver know where files are stored?"
@@ -214,19 +215,19 @@ msgstr "O caminho do CiviCRM contém PATH_SEPARATOR?"
 
 #: install/index.php
 msgid "The path %1 contains PATH_SEPARATOR (the %2 character)."
-msgstr ""
+msgstr "O caminho %1 contém PATH_SEPARATOR (o caracter %2)."
 
 #: install/index.php
 msgid "Folder '%1' exists?"
-msgstr ""
+msgstr "O diretório '%1' existe?"
 
 #: install/index.php
 msgid "There is no '%1' folder."
-msgstr ""
+msgstr "Não existe o diretório '%1\"."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
-msgstr "A pasta %1 tem permissão de escrita?"
+msgstr "O diretório %1 tem permissão de escrita?"
 
 #: install/index.php
 msgid "I can't tell what webserver you are running"
@@ -234,7 +235,7 @@ msgstr "Não é possível informar qual servidor web você está executando"
 
 #: install/index.php
 msgid "Webserver config"
-msgstr ""
+msgstr "Configuração do webserver"
 
 #: install/index.php
 msgid "Recognised webserver"
@@ -256,7 +257,7 @@ msgstr "Suporte ao JSON não está incluso no PHP"
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "Compatibilidade XCache"
 
 #: install/index.php
 msgid ""
@@ -267,22 +268,22 @@ msgstr ""
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
-msgstr "Memória alocada (opção de configuração PHP 'memry_limit')"
+msgstr "Memória alocada (opção de configuração PHP 'memory_limit')"
 
 #: install/index.php
 msgid ""
 "CiviCRM needs a minimum of %1 MB allocated to PHP, but recommends %2 MB."
-msgstr ""
+msgstr "O CiviCRM necessita um mínimode %1 MB alocados ao PHP, o recomendado é %2 MB."
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "Você tem apenas %1 alocado"
 
 #: install/index.php
 msgid ""
 "We can't determine how much memory you have allocated. Install only if "
 "you're sure you've allocated at least %1 MB."
-msgstr ""
+msgstr "Não foi possível determinar a quantidade de memória que foi alocada. Instale apenas se você tem certeza que foram alocados pelo menos %1 MB."
 
 #: install/index.php
 msgid "The following problems are preventing me from installing CiviCRM:"
@@ -302,11 +303,11 @@ msgstr ""
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "O arquivo '%1' não foi encontrado"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "O arquivo '%1' foi encontrado"
 
 #: install/index.php
 msgid ""
@@ -326,7 +327,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "O servidor MySQL não possui suporte ao InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
@@ -334,39 +335,39 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "Não foi possível acessar o banco de dados."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Não foi possível selecionar o banco de dados."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Não foi possível criar tabelas temporárias."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "Não foi possível criar tabelas no banco de dados."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "Não foi possível criar gatilhos (triggers) no banco de dados."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Não foi possível conectar ao servidor de banco de dados"
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Não foi possível obter o travamento de escrita na tabela do banco de dados."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Não foi possível liberar o travamento para a tabela do banco de dados."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Não foi possível consultar as variáveis do servidor de banco de dados."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
@@ -374,37 +375,37 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Não foi possível obter informação sobre \"thread_stack\" do banco de dados."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" tem o valor de %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "O banco de dados: '%1' não existe."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Foi possível criar um novo banco de dados."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "O usuário '%1' não tem a premissão CREATE DATABASE."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
-msgstr ""
+msgstr "As seguinte variáveis PHP estão ausentes: %1"
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "Oops! Não foi possível criar o banco de dados %1"
 
 #: install/index.php
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "Houve erro na tentativa de criar o banco de dados. Verifique as permissões no servidor MySQl e no nome do banco de dados e tente novamente."
 
 #: install/index.php
 msgid ""
@@ -424,11 +425,11 @@ msgstr ""
 
 #: install/index.php
 msgid "CiviCRM Installed"
-msgstr ""
+msgstr "O CiviCRM foi instalado"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "O CiviCRM foi instalado com sucesso"
 
 #: install/index.php
 msgid ""
@@ -458,11 +459,11 @@ msgstr ""
 
 #: install/template.html
 msgid "CiviCRM Installer"
-msgstr "CiviCRM Instalador"
+msgstr "Instalador do CiviCRM"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Versão %1"
 
 #: install/template.html
 msgid ""
@@ -522,7 +523,7 @@ msgstr "Alterar Idioma"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Versão do banco de dados e configurações de conexão"
 
 #: install/template.html
 msgid ""
@@ -574,37 +575,37 @@ msgstr "Outras Configurações"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Verifique novamente os requisitos"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "Detalhes do banco de dados do CiviCRM"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Detalhes do banco de dados Drupal"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Requisitos"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
-msgstr ""
+msgstr "[seu diretório raiz Backdrop]"
 
 #: install/index.php
 msgid "This installer can only be used for the Backdrop version of CiviCRM."
-msgstr ""
+msgstr "Este instaldor só pode ser utilizado para o versão do Brackdrop do CiviCRM."
 
 #: install/index.php
 msgid "Oops! Incorrect Backdrop version"
-msgstr ""
+msgstr "OOps! Versão incorreta do Backdrop"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
 "that '%1' exists if you are running Backdrop 1.0 and over."
-msgstr ""
+msgstr "Esta versãod o CiviCRM somente pode ser utilizada com o Backdrop 1.x. Certifique-se que existe '%1' se você estiver utilizando o Backdrop 1.0 ou superior."
 
 #: install/index.php
 msgid ""
@@ -616,8 +617,8 @@ msgstr ""
 
 #: install/template.html
 msgid "Backdrop Database Settings"
-msgstr ""
+msgstr "Configurações do banco de dados do Backdrop"
 
 #: install/template.html
 msgid "Backdrop Database Details"
-msgstr ""
+msgstr "Detalhes do banco de dados do Backdrop"
